# pre-commit-images

./: .bandit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamlfmt  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  renovate.json  setup.cfg  tox.ini
.github/: CODEOWNERS  release.yml
.github/workflows/: codeql-analysis.yml  continous-integration.yml  create-release.yml  pre-commit-update.yml  uv-lock-update.yml
.scripts/: gifsicle.sh
hooks/: __init__.py  optimize_png.py  optimize_webp.py
pre_commit_images/: __init__.py  optimize_avif.py  optimize_jpg.py  optimize_png.py  optimize_svg.py  optimize_webp.py  optimizer.py  resize.py
tests/: optimize_avif_test.py  optimize_jpg_test.py  optimize_plain_test.py  optimize_png_test.py  optimize_svg_test.py  optimize_webp_test.py  resize_test.py  test.avif
