[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pre_commit_images"
description = "Some image optimization hooks for pre-commit."
authors = [
  { name="Raphael Boidol", email="boidolr@users.noreply.github.com" },
]
urls = {"Respository" = "https://github.com/boidolr/pre-commit-images"}
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]

requires-python = ">=3.9"
dependencies = [
    "pillow==10.0.1",
    "pillow-avif-plugin==1.4.0",
    "scour==0.38.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "tox",
    "tox-pyenv",
]
tests = [
    "pytest",
    "pytest-clarity",
    "pytest-ruff",
    "pytest-mypy",
]

[project.scripts]
optimize-avif = "pre_commit_images.optimize_avif:main"
optimize-jpg = "pre_commit_images.optimize_jpg:main"
optimize-png = "pre_commit_images.optimize_png:main"
optimize-svg = "pre_commit_images.optimize_svg:main"
optimize-webp = "pre_commit_images.optimize_webp:main"

[tool.setuptools.dynamic]
version = {attr = "pre_commit_images.VERSION"}

[tool.setuptools]
packages = ["pre_commit_images"]

[tool.ruff]
line-length = 120
fix = true
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # pyupgrade
    "UP",
    # flake8-bandit
    "S",
    # flake8-comprehensions
    "C4",
    # flake8-annotations
    "ANN",
    # flynt
    "FLY",
    # isort
    "I001",
    # Unneeded noqa
    "RUF100"
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.flake8-annotations]
ignore-fully-untyped = true

[tool.ruff.isort]
force-single-line = true
order-by-type = false

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--mypy --ruff"
filterwarnings = [
    "error",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
