[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pre_commit_images"
description = "Some image optimization hooks for pre-commit."
authors = [
  { name="Raphael Boidol", email="boidolr@users.noreply.github.com" },
]
urls = {"Respository" = "https://github.com/boidolr/pre-commit-images"}
license = {file = "LICENSE"}
readme = "README.md"
version = "1.5.2"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]

requires-python = ">=3.10"
dependencies = [
    "pillow==10.3.0",
]

[project.optional-dependencies]
avif = [
    "pillow-avif-plugin==1.4.3",
]
svg = [
    "scour==0.38.2",
]
dev = [
    "pre-commit",
    "ruff",
    "tox",
    "tox-pyenv",
]
tests = [
    "pytest",
    "pytest-clarity",
    "pytest-ruff",
    "pytest-mypy",
]

[project.scripts]
optimize-avif = "pre_commit_images.optimize_avif:main"
optimize-jpg = "pre_commit_images.optimize_jpg:main"
optimize-png = "pre_commit_images.optimize_png:main"
optimize-svg = "pre_commit_images.optimize_svg:main"
optimize-webp = "pre_commit_images.optimize_webp:main"

[tool.setuptools]
packages = ["pre_commit_images"]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "F",        # Pyflakes
    "E", "W",   # Pycodestyle
    "UP",       # pyupgrade
    "FURB",     # refurb
    "S",        # flake8-bandit
    "C4",       # flake8-comprehensions
    "G",        # flake8-logging-format
    "ANN",      # flake8-annotations
    "SIM",      # flake8-simplify
    "PT",       # flake8-pytest-style
    "RET",      # flake8-return
    "PTH",      # flake8-use-pathlib
    "TID252",   # flake8-tidy-imports (relative-imports)
    "PERF",     # Perflint
    "FLY",      # flynt
    "I",        # isort
    "RUF100"    # Unneeded noqa
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--mypy --ruff"
filterwarnings = [
    "error",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
